--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -58,3 +58,21 @@
     from{opacity: 0.4}
     to{opacity: 1}
 }
+
+@media only screen and (max-width: 320px) {
+  .prev, .next {
+  top: 75px;
+  font-size: 15px;
+  padding: 10px;
+  color: rgba(0, 0, 0, 0.8);
+  }
+
+  .next {
+  left: 291px;
+  }
+
+  .dot {
+  width: 8px;
+  height: 8px;
+  }
+}
