--- a/assets/css/media320.css
+++ b/assets/css/media320.css
@@ -19,7 +19,6 @@
 
   .header__nav-list,
   .header__nav-link,
-  .price,
   .community__empty {
     display: none;
   }
@@ -61,7 +60,8 @@
 
   .community {
     background-attachment: inherit;
-    margin-top: 50px;;
+    margin-top: 50px;
+    ;
   }
 
   .foto__about-content {
@@ -133,10 +133,6 @@
     padding-bottom: 30px;
   }
 
-  .foto__about {
-    margin-top: 50px;
-  }
-
   .map__content {
     flex-direction: column;
   }
@@ -200,7 +196,6 @@
 
   .footer {
     height: 185px;
-
   }
 
   .footer__content {
@@ -211,5 +206,31 @@
   .footer__social-link {
     width: 30px;
     height: 30px;
+  }
+
+  .price {
+    padding: 50px 0;
+  }
+
+  .price__table {
+    font-size: 12px;
+  }
+
+  .price__table th:nth-child(2),
+  .price__table th:nth-child(4),
+  .price__table td:nth-child(2),
+  .price__table td:nth-child(4),
+  .price__table-desktop {
+    display: none;
+  }
+
+  .price__table-mobile {
+    display: inline;
+  }
+
+  .price__table th,
+  .price__table td {
+    width: 140px;
+    padding: 9px;
   }
 }
