--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -85,3 +85,10 @@
     margin-left: 288px;
   }
 }
+
+@media only screen and (max-width: 768px) and (min-width: 641px) {
+
+  .icon-menu {
+    margin-left: 503px;
+  }
+}
