--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -116,3 +116,15 @@
   height: 10px;
   }
 }
+
+@media only screen and (max-width: 768px) and (min-width: 641px) {
+
+  .next {
+  left: 710px;
+  }
+
+  .prev {
+    left: 20px;
+  }
+
+}
