--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -92,3 +92,9 @@
     margin-left: 503px;
   }
 }
+
+@media only screen and (max-width: 912px) and (min-width: 769px) {
+  .icon-menu {
+    margin-left: 622px;
+  }
+}
