--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -4,20 +4,30 @@
 }
 
 .prev, .next {
+    display: block;
     cursor: pointer;
     position: absolute;
     top: 230px;
-    width: auto;
+    width: 45px;
+    height: 40px;
     padding: 16px;
-    color: rgba(0, 0, 0, 0.5);
-    font-weight: bold;
-    font-size: 18px;
-    border-radius: 0 3px 3px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: 0.5s ease;
+}
+
+.prev {
+  background-image: url(../img/left-arrow.svg)
 }
 
 .next {
-    border-radius: 3px 0 0 3px;
-    left: 775px;
+    background-image: url(../img/right-arrow.svg);
+    left: 708px;
+}
+
+.prev:hover, .next:hover {
+  transform: scale(1.1);
 }
 
 .dot_box {
@@ -31,7 +41,7 @@
     height: 10px;
     width: 10px;
     margin: 0 2px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(250, 250, 250, 0.5);
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.5s ease;
@@ -39,7 +49,7 @@
 
 .active, dot:hover {
     background-color: transparent;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(250, 250, 250, 0.5);
 }
 
 .fade {
