--- a/assets/css/media320.css
+++ b/assets/css/media320.css
@@ -19,7 +19,8 @@
 
   .header__nav-list,
   .header__nav-link,
-  .community__empty {
+  .community__empty,
+  .header__nav-link--cont {
     display: none;
   }
 
@@ -34,6 +35,8 @@
 
   .header__nav-title {
     border: none;
+    width: 50%;
+    margin-left: 10px;
   }
 
   .about__content {
@@ -46,6 +49,7 @@
 
   .about__text {
     width: 100%;
+    height: 650px;
   }
 
   .advantages__content {
@@ -105,15 +109,18 @@
     background-image: url(../img/subscribe-3-min.jpg);
   }
 
+  .community__title {
+    font-size: 30px;
+  }
+
   .community__row {
-    width: 100%;
-    line-height: 1.5;
+    line-height: 1;
     font-weight: 500;
-    padding-top: 100px;
+    font-size: 14px;
   }
 
   .about__text-title {
-    padding-top: 50px;
+    padding-top: 20px;
   }
 
   .about__text-row {
@@ -137,9 +144,9 @@
     flex-direction: column;
   }
 
-  .map__content-map {
+  #map__content-map {
     width: 100%;
-    height: 214px;
+    height: 300px;
   }
 
   .map__content-text {
@@ -161,11 +168,11 @@
   }
 
   .map__content-row {
-    padding-top: 20px;
+    padding-top: 30px;
   }
 
   .map__content-row--link {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   .subscribe__content {
@@ -232,5 +239,14 @@
   .price__table td {
     width: 140px;
     padding: 9px;
+  }
+
+  .community__text {
+    width: 100%;
+  }
+
+  .menu,
+  .background {
+    display: block;
   }
 }
