--- a/assets/css/media414.css
+++ b/assets/css/media414.css
@@ -19,7 +19,8 @@
 
   .header__nav-list,
   .header__nav-link,
-  .community__empty {
+  .community__empty,
+  .header__nav-link--cont {
     display: none;
   }
 
@@ -34,6 +35,8 @@
 
   .header__nav-title {
     border: none;
+    width: 50%;
+    margin-left: 19px;
   }
 
   .header__nav {
@@ -50,6 +53,15 @@
 
   .about__text {
     width: 100%;
+    height: 515px;
+  }
+
+  .community__text {
+    width: 100%;
+  }
+
+  .community__title {
+    font-size: 30px;
   }
 
   .advantages__content {
@@ -109,15 +121,21 @@
   }
 
   .community__row {
-    width: 90%;
     margin: 0 auto;
-    line-height: 1.5;
+    line-height: 1;
     font-weight: 500;
-    padding-top: 100px;
+    font-size: 16px;
+    padding-top: 10px;
   }
 
   .about__text-title {
-    padding-top: 50px;
+    padding-top: 20px;
+  }
+
+  .menu,
+  .background {
+    display: block;
+    width: 50%;;
   }
 
   .about__text-row {
@@ -141,9 +159,9 @@
     flex-direction: column;
   }
 
-  .map__content-map {
+  #map__content-map {
     width: 100%;
-    height: 214px;
+    height: 350px;
   }
 
   .map__content-text {
