--- a/assets/css/media640.css
+++ b/assets/css/media640.css
@@ -19,7 +19,8 @@
 
   .header__nav-list,
   .header__nav-link,
-  .community__empty {
+  .community__empty,
+  .header__nav-link--cont {
     display: none;
   }
 
@@ -33,6 +34,14 @@
 
   .header__nav-title {
     border: none;
+    width: 50%;
+    margin-left: 35px;
+  }
+
+  .menu,
+  .background {
+    width: 50%;
+    display: block;
   }
 
   .header__nav {
@@ -49,6 +58,7 @@
 
   .about__text {
     width: 100%;
+    height: 500px;;
   }
 
   .advantages__content {
@@ -84,15 +94,16 @@
   }
 
   .community__row {
-    width: 90%;
     margin: 0 auto;
-    line-height: 1.5;
+    line-height: 1.1;
     font-weight: 500;
-    padding-top: 120px;
+    padding-top: 20px;
+    font-size: 18px;
+    padding: 8px 0;
   }
 
   .about__text-title {
-    padding-top: 50px;
+    padding-top: 20px;
   }
 
   .about__text-row {
@@ -103,6 +114,7 @@
 
   .advantages {
     background-color: rgba(241, 241, 241, 0.6);
+    padding: 20px 0;;
   }
 
   .advantages__content--top {
@@ -114,17 +126,14 @@
     padding-bottom: 30px;
   }
 
-  .foto__about {
-    margin-top: 50px;
-  }
 
   .map__content {
     flex-direction: column;
   }
 
-  .map__content-map {
+  #map__content-map {
     width: 100%;
-    height: 330px;
+    height: 400px;
   }
 
   .map__content-text {
@@ -133,7 +142,7 @@
 
   .map__content-title--mobile {
     display: block;
-    padding: 50px 0;
+    padding: 30px 0;
     margin-bottom: 0;
   }
 
@@ -147,7 +156,7 @@
 
   .map__content-row {
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
     /* text-align:  center; */
     ;
   }
@@ -157,7 +166,8 @@
   }
 
   .map__content-row--link {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    margin: 30px auto;
   }
 
   .subscribe__content {
@@ -209,11 +219,27 @@
   .advantages__content--tablet {
     display: flex;
     flex-direction: row;
+    padding-top: 20px;
   }
 
   .advantages__content--tablet .advantages__content-item {
-    width: 44%;
+    width: 20%;
     margin: 0 auto;
+  }
+
+  .advantages__content-img {
+    width: 50px;
+    padding: 15px 0;
+  }
+
+  .advantages__content-row {
+    padding: 10px 0;
+    font-size: 8px;
+
+  }
+
+  .community__text {
+    width: 100%;
   }
 
   .advantages__content--mobile,
@@ -231,7 +257,7 @@
   }
 
   .price__table {
-    font-size: 12px;
+    font-size: 10px;
   }
 
   .price {
