--- a/assets/css/media768.css
+++ b/assets/css/media768.css
@@ -19,8 +19,15 @@
 
   .header__nav-list,
   .header__nav-link,
-  .community__empty {
+  .community__empty,
+  .header__nav-link--cont {
     display: none;
+  }
+
+  .menu,
+  .background {
+    display: block;
+    width: 50%;
   }
 
   .header__title {
@@ -33,6 +40,8 @@
 
   .header__nav-title {
     border: none;
+    margin-left: -52px;
+    width: 50%;
   }
 
   .header__nav {
@@ -48,6 +57,11 @@
   }
 
   .about__text {
+    width: 100%;
+    height: 450px;
+  }
+
+  .community__text {
     width: 100%;
   }
 
@@ -86,13 +100,14 @@
   .community__row {
     width: 90%;
     margin: 0 auto;
-    line-height: 1.5;
+    line-height: 1.1;
     font-weight: 500;
-    padding-top: 120px;
+    padding-top: 20px;
+    padding: 8px;;
   }
 
-  .about__text-title {
-    padding-top: 50px;
+  .about__text-title {;;
+    padding-top: 10px;
   }
 
   .about__text-row {
@@ -115,16 +130,15 @@
   }
 
   .foto__about {
-    margin-top: 50px;
   }
 
   .map__content {
     flex-direction: column;
   }
 
-  .map__content-map {
+  #map__content-map {
     width: 100%;
-    height: 330px;
+    height: 400px;
   }
 
   .map__content-text {
@@ -133,7 +147,7 @@
 
   .map__content-title--mobile {
     display: block;
-    padding: 50px 0;
+    padding: 30px 0;
     margin-bottom: 0;
   }
 
@@ -147,7 +161,7 @@
 
   .map__content-row {
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     /* text-align:  center; */
     ;
   }
@@ -175,7 +189,7 @@
   }
 
   .join {
-    height: 100%;
+    height: 330px;
   }
 
   .join__title {
@@ -191,7 +205,7 @@
   }
 
   .footer__content {
-    width: 80%;
+    width: 50%;
     padding: 30px 0;
   }
 
