--- a/assets/css/media640.css
+++ b/assets/css/media640.css
@@ -20,9 +20,17 @@
   .header__nav-list,
   .header__nav-link,
   .community__empty,
-  .header__nav-link--cont {
+  .header__nav-link--cont,
+  .bgvideo {
     display: none;
   }
+
+  .  .header {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
+}
 
   .header__title {
     font-size: 40px;
