add changes and fix bags

--- a/assets/css/media320.css
+++ b/assets/css/media320.css
@@ -26,9 +26,8 @@
   }
 
   .header {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-repeat: no-repeat;;
+  background-position: center;;;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
 }
 
