--- a/assets/css/media640.css
+++ b/assets/css/media640.css
@@ -25,7 +25,7 @@
     display: none;
   }
 
-  .  .header {
+  .header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
