add changes and fix bag

--- a/assets/css/media320.css
+++ b/assets/css/media320.css
@@ -21,15 +21,17 @@
   .header__nav-link,
   .community__empty,
   .header__nav-link--cont,
-  .bgvideo {
+  .bgvideo,
+  .subscribe__content p {
     display: none;
   }
 
   .header {
-  background-repeat: no-repeat;;
-  background-position: center;;;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
-}
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
+  }
 
   .header__title {
     font-size: 40px;
@@ -256,4 +258,23 @@
   .background {
     display: block;
   }
+
+  .subscribe__form {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .subscribe__form input {
+    width: 280px;
+    height: 40px;
+    margin: 0 auto;
+    border-right: 1px solid #e5e5e5;
+  }
+
+  .subscribe__button {
+    width: 280px;
+    height: 40px;
+    margin: 10px auto;
+  }
+
 }
