--- a/assets/css/media414.css
+++ b/assets/css/media414.css
@@ -21,16 +21,17 @@
   .header__nav-link,
   .community__empty,
   .header__nav-link--cont,
-  .bgvideo {
+  .bgvideo,
+  .subscribe__content p {
     display: none;
   }
 
-    .header {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
-}
+  .header {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/happy-people.jpg);
+  }
 
   .header__title {
     font-size: 40px;
@@ -143,7 +144,8 @@
   .menu,
   .background {
     display: block;
-    width: 50%;;
+    width: 50%;
+    ;
   }
 
   .about__text-row {
@@ -260,5 +262,23 @@
 
   .price {
     padding: 50px 0;
+  }
+
+  .subscribe__form {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .subscribe__form input {
+    width: 280px;
+    height: 40px;
+    margin: 0 auto;
+    border-right: 1px solid #e5e5e5;
+  }
+
+  .subscribe__button {
+    width: 280px;
+    height: 40px;
+    margin: 10px auto;
   }
 }
