--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -1,51 +1,176 @@
 .modal_div {
-  width: 509px;
-  height: 491px;
-  border-radius: 22px;
+  width: 600px;
+  height: 400px;
+  border-radius: 3px;
   background: #fff;
   position: fixed;
   top: 45%;
-  margin-top: -250px;
-  margin-left: -253px;
+  margin-top: -185px;
+  margin-left: -260px;
   display: none;
   opacity: 0;
-  z-index: 5;
-  padding: 20px 10px;
-  left: 50%;
+  z-index: 99999999999999999999;
+  left: 48%;
   margin-bottom: 150px;
 }
 
-.modal_div .modal_close::after {
-  font-family: "FontAwesome";
-  color: #8560a8;
-  content: "\f057";
+.modal_div .modal_close {
+  width: 15px;
+  height: 15px;
   position: absolute;
-  top: 12px;
-  right: 15px;
+  top: 0px;
+  left: 615px;
   cursor: pointer;
-  display: block;
-  font-size: 20px;
+  background-image: url(../img/close.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
-.overlay,
-{
-  z-index: 3;
-
+.overlay {
+  z-index: 99999999;
   position: fixed;
-
   background-color: #000;
-
-  opacity: 0.5;
-
-  -moz-opacity: 0.5;
-
-  filter: alpha(opacity=50);
+  opacity: 0.3;
+  -moz-opacity: 0.3;
+  filter: alpha(opacity=30);
   width: 100%;
   height: 100%;
-
   top: 0;
-
   left: 0;
   cursor: pointer;
   display: none;
+  overflow-y: hidden;
+}
+
+.modal_div-title {
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 0.05em;
+  background-color: #2ebd7f;
+  color: #f2f2f2;
+  border-radius: 3px 3px 0 0;
+  padding: 18px;
+}
+
+.modal_div-text {
+  font-weight: 500;
+  padding: 20px;
+  text-align: center;
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+.modal_div-form {
+  display: flex;
+  padding: 0 33px 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+  height: 55%;
+  ;
+}
+
+.modal_div-form input {
+  width: 250px;
+  height: 50px;
+  padding: 0 16px;
+  border: 1px solid #e5e5e5;
+  color: #787878;
+  font-size: 12px;
+}
+
+.modal_div-button {
+  width: 250px;
+  margin: 0 auto;
+  height: 50px;
+  border: none;
+  display: block;
+  font-weight: 500;
+  background-color: #2ebd7f;
+  color: #f2f2f2;
+  letter-spacing: 0.05em;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 320px) {
+  .modal_div {
+    width: 280px;
+    left: 87.4%;
+  }
+
+  .modal_div-text {
+    font-size: 12px;
+  }
+
+  .modal_div-form input {
+    height: 35px;
+    margin-bottom: 10px;
+  }
+
+  .modal_div .modal_close {
+    left: 260px;
+    top: 5px;
+  }
+}
+
+@media only screen and (max-width: 414px) and (min-width: 321px) {
+  .modal_div {
+    width: 320px;
+    left: 74.3%;
+  }
+
+  .modal_div-text {
+    font-size: 12px;
+  }
+
+  .modal_div-form input {
+    height: 35px;
+    margin-bottom: 10px;
+  }
+
+  .modal_div .modal_close {
+    left: 297px;
+    top: 6px;
+  }
+}
+
+@media only screen and (max-width: 640px) and (min-width: 415px) {
+  .modal_div {
+    width: 415px;
+    left: 58.3%;
+  }
+
+  .modal_div-text {
+    font-size: 12px;
+    margin-bottom: 8px;
+  }
+
+  .modal_div-form input {
+    height: 35px;
+    margin-bottom: 10px;
+  }
+
+  .modal_div .modal_close {
+    left: 425px;
+    top: 0;
+  }
+
+  .modal_div-form {
+  justify-content: center;
+
+  }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 641px) {
+  .modal_div {
+    left: 44.5%;
+  }
+}
+
+@media only screen and (max-width: 912px) and (min-width: 769px) {
+  .modal_div {
+    left: 45.5%;
+  }
 }
