--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ a {
 
 
 
+
 /*   H E A D E R   */
 
 .header__nav-wrapper {
@@ -76,7 +77,7 @@ a {
   height: 60px;
   border-bottom: 1px solid rgba(242, 242, 242, 0.5);
   position: fixed;
-  z-index: 9999999;
+  z-index: 999999999;
   width: 100%;
 }
 
@@ -121,7 +122,7 @@ a {
 
 
 .navbar-fixed-top.scrolled {
-  background-color: rgba(250, 250, 250, 0.9) !important;
+  background-color: rgba(250, 250, 250, 1) !important;
   transition: background-color 200ms linear;
 }
 
@@ -192,6 +193,7 @@ a {
 .background {
   display: none;
 }
+
 
 
 
@@ -276,6 +278,7 @@ a {
 
 
 
+
 /*   A D V A N T A G E S   */
 
 .advantages {
@@ -283,7 +286,9 @@ a {
   padding: 50px 0;
   margin-top: -23px;
   z-index: 99999999;
-  position: relative;;;
+  position: relative;
+  ;
+  ;
   ;
 }
 
@@ -317,6 +322,7 @@ a {
   font-weight: 500;
   line-height: 1.5;
 }
+
 
 
 
@@ -365,11 +371,13 @@ a {
 
 
 
+
 /*   P R I C E   */
 
 .price {
   padding: 100px 0;
-  background-color: #fff;;
+  background-color: #fff;
+  ;
 }
 
 .price__table {
@@ -438,6 +446,7 @@ a {
 
 
 
+
 /*   F O T O - A B O U T   */
 
 .foto__about-content {
@@ -496,6 +505,7 @@ a {
   background-size: cover;
   background-position: center;
 }
+
 
 
 /*   M A P   */
@@ -567,17 +577,17 @@ a {
 
 
 
+
 /* subscribe */
 
 .subscribe {
   background-color: #fff;
   padding-top: 50px;
-  /* margin-top: 150px; */;;
 }
 
 .subscribe__title {
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .subscribe__content {
@@ -631,6 +641,32 @@ a {
   display: none;
 }
 
+.subscribe__form {
+  display: flex;
+  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.subscribe__form input {
+  width: 250px;
+  height: 50px;
+  padding: 0 16px;
+  border: 1px solid #e5e5e5;
+  border-right: none;
+}
+
+.subscribe__button {
+  width: 150px;
+  border: none;
+  background-color: #2ebd7f;
+  color: #f2f2f2;
+  letter-spacing: 0.05em;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+
 
 /*  J O I N  */
 
@@ -666,6 +702,7 @@ a {
 .join__link:hover {
   transform: scale(1.1);
 }
+
 
 
 /*  F O O T E R  */
