--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,12 +326,12 @@ a {
 /*   C O M M U N I T Y   */
 
 .community {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/bg_community.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/community_EN.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 500px;
+  height: 400px;
 }
 
 .community__content {
@@ -340,7 +340,7 @@ a {
 }
 
 .community__empty {
-  width: 60%;
+  width: 0%;
 }
 
 .community__text {
@@ -356,10 +356,10 @@ a {
 }
 
 .community__row {
-  line-height: 1.1;
+  line-height: 0;
   color: #f2f2f2;
   font-size: 18px;
-  padding: 30px 0;
+  padding: 25px 0;
   font-weight: 500;
 }
 
@@ -759,3 +759,10 @@ a {
 .footer__row a {
   color: #f2f2f2;
 }
+
+.bgvideo {display: none;}
+
+.header { background-image: url(../img/bg_1.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; }
