--- a/assets/css/media414.css
+++ b/assets/css/media414.css
@@ -12,7 +12,8 @@
   .advantages__wrapper,
   .community__wrapper,
   .price__wrapper,
-  .join__wrapper {
+  .join__wrapper,
+  .press__wrapper {
     width: 320px;
     margin: 0 auto;
   }
@@ -131,10 +132,10 @@
 
   .community__row {
     margin: 0 auto;
-    line-height: 1;
+    line-height: 1.2;
     font-weight: 500;
     font-size: 16px;
-    padding-top: 10px;
+    padding: 10px 0;
   }
 
   .about__text-title {
@@ -145,7 +146,6 @@
   .background {
     display: block;
     width: 50%;
-    ;
   }
 
   .about__text-row {
@@ -280,5 +280,17 @@
     width: 280px;
     height: 40px;
     margin: 10px auto;
+  }
+
+  .press__content {
+    justify-content: center;
+  }
+
+  .press {
+    height: 550px;
+  }
+
+  .press_link {
+    margin-bottom: 30px;
   }
 }
