--- a/assets/css/media768.css
+++ b/assets/css/media768.css
@@ -12,7 +12,8 @@
   .advantages__wrapper,
   .community__wrapper,
   .price__wrapper,
-  .join__wrapper {
+  .join__wrapper,
+  .press__wrapper {
     width: 630px;
     margin: 0 auto;
   }
@@ -268,6 +269,14 @@
   .subscribe__content--tablet .subscribe__img {
     width: 48%;
     margin: 0 auto;
+  }
+
+  .press {
+    height: 360px;
+  }
+
+  .press_link {
+    margin-bottom: 30px;
   }
 
 }
