--- a/assets/css/media912.css
+++ b/assets/css/media912.css
@@ -12,7 +12,8 @@
   .advantages__wrapper,
   .community__wrapper,
   .price__wrapper,
-  .join__wrapper {
+  .join__wrapper,
+  .press__wrapper {
     width: 750px;
     margin: 0 auto;
   }
@@ -239,6 +240,14 @@
 
   .subscribe__content--tablet {
     display: none;
+  }
+
+  .press {
+    height: 360px;
+  }
+
+  .press_link {
+    margin-bottom: 30px;
   }
 
 }
